Add coverage for home app in Travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
 script:
     - SECRET_KEY="placeholdersecretkey" python3 manage.py test
     - SECRET_KEY="placeholdersecretkey" coverage run --source=wearable_tech manage.py test
+    - SECRET_KEY="placeholdersecretkey" coverage run --source=home manage.py test
 # Push the results back to codecov
 after_success:
     - codecov
