--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.3.1
+coverage==5.5
 Django==3.1.7
 django-allauth==0.44.0
 oauthlib==3.1.0
+Pillow==8.2.0
 PyJWT==2.0.1
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
