--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.3.1
+boto3==1.17.62
+botocore==1.20.62
 coverage==5.5
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
 django-countries==7.1
 django-crispy-forms==1.11.2
+django-storages==1.11.1
 gunicorn==20.1.0
+jmespath==0.10.0
 oauthlib==3.1.0
 Pillow==8.2.0
 psycopg2-binary==2.8.6
@@ -13,6 +17,7 @@ PyJWT==2.0.1
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
+s3transfer==0.4.2
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
